--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </table>
       
     <hr size="4" noshade="">
-   <a href="HTML -  Personal site/school.html">my education</a>
+   <a href="school.html">my education</a>
    <a href="contact me.html">Contact Me</a>
     <h3>Hobbies</h3>
     <ol>
